update user, swagger
