# src/routes/user.ts
@@ -1,5 +1,6 @@
 import express from 'express';
 import controller from '../controllers/user';
+import adminCheck from '../middleware/adminCheck';
 import extractJWT from '../middleware/extractJWT';
 
 const router = express.Router();
@@ -7,10 +8,10 @@ const router = express.Router();
 router.get('/auth/validate', extractJWT, controller.validateToken);
 router.get('/', controller.getAllUsers);
 router.post('/', controller.register);
-router.get('/:id', ()=>{});
-router.put('/:id', ()=>{});
-router.delete('/:id', ()=>{});
-router.delete('/', controller.deleteAll);
+router.get('/:id', controller.getUser);
+router.put('/:id', controller.updateUser);
+router.delete('/:id',extractJWT, controller.deleteUser);
+router.delete('/',adminCheck, controller.deleteAll);
 router.post('/login', controller.login);
 
 export = router;
