# swagger.json
@@ -1,41 +1,27 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
     "title": "My User Project CRUD",
     "description": "My User Project Application API",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
-    }
+    },
+    "version": "1.0.0"
   },
-  "host": "localhost:8080",
-  "basePath": "/api/v1",
+  "servers": [
+    {
+      "url": "http://localhost:8080/api/v1"
+    },
+    {
+      "url": "https://localhost:8080/api/v1"
+    }
+  ],
   "tags": [
     {
       "name": "Users",
       "description": "API for users in the system"
     }
-  ],
-  "schemes": [
-    "http",
-    "https"
-  ],
-
-"securityDefinitions":{
-  "Bearer":{
-    "type": "apiKey",
-    "name": "Authorization",
-    "in": "header"
-  }
-    
-},
-  
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
   ],
   "paths": {
     "/users": {
@@ -47,8 +33,12 @@
         "responses": {
           "200": {
             "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Users"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Users"
+                }
+              }
             }
           }
         }
@@ -59,29 +49,31 @@
         ],
         "summary": "Create users",
         "description": "Create new user in system",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "body",
-            "description": "User that we want to create",
-            "schema": {
-              "$ref": "#/definitions/User"
+        "requestBody": {
+          "description": "User that we want to create",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
             }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
+          },
+          "required": false
+        },
         "responses": {
           "201": {
             "description": "New user is created",
-            "schema": {
-              "$ref": "#/definitions/User"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
             }
           }
-        }
-      } ,
-
+        },
+        "x-codegen-request-body-name": "user"
+      },
       "delete": {
         "tags": [
           "Users"
@@ -90,63 +82,118 @@
         "responses": {
           "200": {
             "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Users"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Users"
+                }
+              }
             }
           }
         }
       }
     },
     "/users/{id}": {
-      "parameters": [
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "description": "ID of user that we want to find",
-          "type": "integer"
-        }
-      ],
-      "delete": {
-        "summary": "Delete user with given ID",
+      "get": {
         "tags": [
           "Users"
         ],
+        "summary": "get one User by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user that we want to find",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
-            "description": "User is deleted",
-            "schema": {
-              "$ref": "#/definitions/User"
+            "description": "get user successful",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
             }
           }
         }
       },
       "put": {
-        "summary": "Update user with give ID",
         "tags": [
           "Users"
         ],
+        "summary": "Update user with give ID",
         "parameters": [
           {
-            "name": "user",
-            "in": "body",
-            "description": "User with new values of properties",
+            "name": "id",
+            "in": "path",
+            "description": "ID of user that we want to find",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/updateUser"
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "User with new values of properties",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateUser"
+              }
+            }
+          },
+          "required": false
+        },
+        "responses": {
+          "200": {
+            "description": "User is updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        },
+        "x-codegen-request-body-name": "user"
+      },
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Delete user with given ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user that we want to find",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "User is updated",
-            "schema": {
-              "$ref": "#/definitions/User"
+            "description": "User is deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
             }
           }
         }
       }
     },
-
     "/users/login": {
       "post": {
         "tags": [
@@ -154,95 +201,194 @@
         ],
         "summary": "Login",
         "description": "Login",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "body",
-            "description": "Login",
-            "schema": {
-              "$ref": "#/definitions/User"
+        "requestBody": {
+          "description": "Login",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
             }
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
+          },
+          "required": false
+        },
         "responses": {
           "200": {
             "description": "Login successful",
-            "schema": {
-              "$ref": "#/definitions/User"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
             }
           }
-        }
-      } 
+        },
+        "x-codegen-request-body-name": "user"
+      }
     },
-    
     "/users/auth/validate": {
       "get": {
         "tags": [
           "Users"
         ],
-        "security":[
-          {
-            "Bearer": []
-          }
-        ],
         "summary": "Check auth",
-          "responses": {
-            "200": {
-              "description": "Will send `Authenticated`"
-            },
-            "403": {
-              "description": "You do not have necessary permissions for the resource"
-            }
+        "responses": {
+          "200": {
+            "description": "Will send `Authenticated`",
+            "content": {}
+          },
+          "403": {
+            "description": "You do not have necessary permissions for the resource",
+            "content": {}
           }
-      } 
+        },
+        
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
-    
-
-
-
   },
-  "definitions": {
-    "User": {
-      "required": [
-        "email",
-        "password"
-      ],
-      "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
+  "components": {
+    "schemas": {
+      "User": {
+        "required": [
+          "email",
+          "password"
+        ],
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email",
+            "example":"user@example.com"
+          },
+          "password": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "avatar": {
+            "type": "string",
+            "example": "https://chat-app-server-hero.herokuapp.com/public/images/avatar-default.jpg"
+          },
+          "coverPhoto": {
+            "type": "string"
+          },
+          "refreshToken": {
+            "type": "string"
+          },
+          "isOnline": {
+            "type":"boolean"
+          },
+          "isBlock": {
+            "type":"boolean"
+          },
+          "lastLogin": {
+            "type": "string", 
+            "format": "date-time"
+          },
+          "createdAt": {
+            "type": "string", 
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string", 
+            "format": "date-time"
+          },
+          "gender": {
+            "type":"string",
+            "enum":["unknow","male","female"]
+          },
+          "role": {
+            "type":"string",
+            "enum":["user","admin"]
+          },
+          "languages": {
+            "type":"string",
+            "enum":["vi","en"]
+          },
+          "verify": {
+            "type":"boolean",
+            "example":false
+          },
+          "available": {
+            "type":"boolean"
+          }
+
         }
-       
+      },
+      "updateUser": {
+        "required": [
+        ],
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "avatar": {
+            "type": "string"
+          },
+          "coverPhoto": {
+            "type": "string"
+          },
+          "refreshToken": {
+            "type": "string"
+          },
+          "isOnline": {
+            "type":"boolean"
+          },
+          "isBlock": {
+            "type":"boolean"
+          },
+          "lastLogin": {
+            "type": "string", 
+            "format": "date-time"
+          },
+          "gender": {
+            "type":"string",
+            "enum":["unknow","male","female"]
+          },
+          "role": {
+            "type":"string",
+            "enum":["user","admin"]
+          },
+          "languages": {
+            "type":"string",
+            "enum":["vi","en"]
+          }
+
+        }
+      },
+      "Users": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/User"
+        }
       }
     },
-    "updateUser": {
-      "required": [
-        "email",
-        "password"
-      ],
-      "properties": {
-        "_id": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        }
-      }
-    },
-    "Users": {
-      "type": "array",
-      "items":{
-        "$ref": "#/definitions/User"
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
-   
   }
 }
